--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/sweater?serverTimezone=Europe/Minsk&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root123
+spring.jpa.hibernate.ddl-auto=update
