--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sweater?serverTimezone=Europe/
 spring.datasource.username=root
 spring.datasource.password=root123
 spring.jpa.hibernate.ddl-auto=update
+
+ spring.mustache.expose-request-attributes= true
